# ChangeLog for x11-libs/libdrm
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/x11-libs/libdrm/ChangeLog,v 1.55 2008/06/10 07:38:28 dberkholz Exp $

  10 Jun 2008; Donnie Berkholz <dberkholz@gentoo.org>; libdrm-2.3.0.ebuild:
  Drop to ~mips to shut up repoman.

*libdrm-2.3.1_pre20080528 (10 Jun 2008)

  10 Jun 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  +libdrm-2.3.1_pre20080528.ebuild, -libdrm-9999.ebuild:
  Add ebuild pulling a specific git revision instead of live git head.

*libdrm-9999 (10 Jun 2008)

  10 Jun 2008; Donnie Berkholz <dberkholz@gentoo.org>; +libdrm-9999.ebuild:
  Add live git version, for mesa 7.1.

  31 Jan 2008; Donnie Berkholz <dberkholz@gentoo.org>; ChangeLog:
  Clean up.

  31 Jan 2008; Donnie Berkholz <dberkholz@gentoo.org>; -libdrm-2.0.2.ebuild:
  Clean up.

  07 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org> libdrm-2.3.0.ebuild:
  Stable on sparc wrt #175465

  02 Jul 2007; Raúl Porcel <armin76@gentoo.org> libdrm-2.3.0.ebuild:
  alpha stable wrt #175465

  24 Jun 2007; Joshua Kinard <kumba@gentoo.org> libdrm-2.3.0.ebuild:
  Stable on mips, per #175465.

  20 May 2007; Jeroen Roovers <jer@gentoo.org> libdrm-2.3.0.ebuild:
  Stable for HPPA (bug #175465).

  12 May 2007; nixnut <nixnut@gentoo.org> libdrm-2.3.0.ebuild:
  Stable on ppc wrt bug 175465

  04 May 2007; Daniel Gryniewicz <dang@gentoo.org> libdrm-2.3.0.ebuild:
  Marked stable on amd64 for bug #175465

  29 Apr 2007; Andrej Kacian <ticho@gentoo.org> libdrm-2.3.0.ebuild:
  Stable on x86, bug #175465.

  25 Apr 2007; Raúl Porcel <armin76@gentoo.org> libdrm-2.3.0.ebuild:
  Stable on ia64 wrt bug #175465.

  25 Apr 2007; Markus Rothe <corsair@gentoo.org> libdrm-2.3.0.ebuild:
  Stable on ppc64; bug #175465

  21 Apr 2007; Joshua Baergen <joshuabaergen@gentoo.org>
  -libdrm-2.0.1.ebuild:
  Clean out old version.

  06 Jan 2007; Bryan Østergaard <kloeri@gentoo.org> libdrm-2.0.2.ebuild:
  Stable on Alpha.