@@ -1,6 +1,12 @@
 # ChangeLog for x11-libs/libdrm
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/x11-libs/libdrm/ChangeLog,v 1.55 2008/06/10 07:38:28 dberkholz Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libdrm/ChangeLog,v 1.56 2008/07/01 08:32:48 dberkholz Exp $
+
+*libdrm-2.3.1 (01 Jul 2008)
+
+  01 Jul 2008; Donnie Berkholz <dberkholz@gentoo.org>; +libdrm-2.3.1.ebuild:
+  Bump. xorg-server 1.5/mesa 7.1 will actually build against this one.
+  TTM/GEM not included.
 
   10 Jun 2008; Donnie Berkholz <dberkholz@gentoo.org>; libdrm-2.3.0.ebuild:
   Drop to ~mips to shut up repoman.
